2004-09-23  Andreas Kupries  <andreask@activestate.com>

	* logger.tcl (logger::import): Fixed malformed return value,
	  premature end of the string due to unquoted ".

	* logger.tcl: A small fix in the new command [nsExists] for Tcl
	  8.[23]. The condition was revers.

2004-09-23  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl : Added a workaround for non-existing
	  namespace exists in logger::import, so we can
	  stay at Tcl 8.2.
	
2004-09-13  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl : Changed defaults for logger::import,
          logger.man : added a -force option and some more tests
          logger.test:

2004-09-13  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl : Implemented and doc'ed new global logger::setlevel
          logger.man : 

2004-09-06  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl : Implemented and doc'ed new logger::import feature.
          logger.man : Needs more tests.
          logger.test:
          
2004-09-06  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl: Removed hardcoded level names in logger::init.

2004-06-18  Andreas Kupries  <andreask@activestate.com>

	* log.man: Fixed bad formatting in documentation of 'logarray'.

2004-06-04  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl : Changed error handling from ::error to
	  logger.test: return -code error. Added more tests and
	  argument checking to make the code more robust.             
	  
2004-05-26  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl: Fixed bug with enable/disable
	  wrong enabled value was reported if disable critical was used.
	  Added "none" as result for currentloglevel for this situation.
	* logger.test: Added tests 7.1-7.4 to check for the above bug.
	* logger.man: Fixed docs and replaced the nonsensical "or" with 
	  the correct "and" in enable/disable docs. Added a comment how